added header component and made some changes

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,3 +1,36 @@
-<p>
-  header works!
-</p>
+<!-- <mat-toolbar>
+  <button mat-mini-fab color="warn">
+    <mat-icon>dashboard</mat-icon>
+  </button>
+  <span class="example-icon"></span>
+  {{pageTitle}}
+  <mat-icon>{{iconTitle}}</mat-icon>
+  <span class="example-spacer"></span>
+  <mat-icon>settings</mat-icon>
+</mat-toolbar> -->
+
+
+<mat-toolbar>
+    <button mat-mini-fab color="warn" [matMenuTriggerFor]="navMenu">
+      <mat-icon>dashboard</mat-icon>
+    </button>
+    <span class="example-icon"></span>
+    <mat-icon>{{iconTitle}}</mat-icon>
+    <span class="example-icon"></span>
+    {{pageTitle}}
+    <span class="example-spacer"></span>
+    <mat-icon [color]="userStatusColor">account_box</mat-icon>
+    <span class="example-icon"></span>
+    <mat-icon matBadge="{{counter}}" matBadgePosition="before" matBadgeColor="accent">shopping_cart</mat-icon>
+    <span class="example-icon"></span>
+    <mat-icon>settings</mat-icon>
+  
+    <mat-menu #navMenu="matMenu">
+      <!-- <a href="{{configData.fblink}}" target="_blank"><button mat-menu-item><mat-icon svgIcon="fb"></mat-icon></button></a>
+      <a href="{{configData.linkedin}}" target="_blank"><button mat-menu-item><mat-icon svgIcon="linkedin"></mat-icon></button></a>
+      <a href="{{configData.github}}" target="_blank"><button mat-menu-item><mat-icon svgIcon="git"></mat-icon></button></a> -->
+      <button mat-menu-item routerLink="/aboutus"><mat-icon>info</mat-icon></button>
+      <button mat-menu-item routerLink="/setproduct"><mat-icon>settings</mat-icon></button>
+    </mat-menu>
+  
+  </mat-toolbar>
