--- a/src/app/shared/aboutus/aboutus.component.html
+++ b/src/app/shared/aboutus/aboutus.component.html
@@ -1,3 +1,6 @@
-<p>
-  aboutus works!
-</p>
+<header pageTitle="About us" iconTitle="info"></header>
+
+<mat-tab-group>
+  <mat-tab label="Message" >Content 1</mat-tab>
+  <mat-tab label="About us">Content 2</mat-tab>
+</mat-tab-group>
