--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -1,5 +1,12 @@
 <header pageTitle="About us" iconTitle="settings"></header>
-
-<p>
-  settings works!
-</p>
+<mat-tab-group>
+    <mat-tab label="Info">
+        <user></user>
+    </mat-tab>
+    <mat-tab label="Carts">
+                <carts></carts>
+    </mat-tab>
+    <mat-tab label="Orders">
+                <orders></orders>
+    </mat-tab>
+</mat-tab-group>
